<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    android:padding="24dp"
    tools:context=".MainActivity">

    <!-- Кнопка сброса -->
    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_button"
        android:backgroundTint="#673AB7"
        android:textColor="#FFFFFF"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Вопрос -->
    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/question_australia"
        android:textSize="20sp"
        android:textColor="#212121"
        android:textAlignment="center"
        android:gravity="center"
        android:padding="24dp"
        app:layout_constraintTop_toBottomOf="@id/reset_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <!-- Кнопки True/False -->
    <LinearLayout
        android:id="@+id/answer_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/question_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#009688"
            android:text="@string/true_button"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/false_button"
            android:layout_width="167dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="#009688"
            android:text="@string/false_button"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <!-- Финальный результат -->
    <TextView
        android:id="@+id/final_score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#2A6F2C"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/answer_buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Кнопка подсказки -->
    <Button
        android:id="@+id/cheat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheat_button"
        android:backgroundTint="#3F51B5"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/final_score_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <!-- Кнопки "Назад" и "Вперёд" -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/cheat_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp">

        <Button
            android:id="@+id/prev_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prev_button"
            android:backgroundTint="#B0BEC5"
            android:textColor="#FFFFFF"
            android:visibility="invisible"
            android:layout_marginEnd="12dp" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button"
            android:backgroundTint="#B0BEC5"
            android:textColor="#FFFFFF"
            android:layout_marginStart="12dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>